# goit-pythonweb-hw-08

./: .env_example  README.md  postgres.sh  pyproject.toml
migrations/versions/: 576d00191ab8_init.py
src/api/: contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/schemas/: contacts.py
src/services/: contacts.py
